--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/website2.ico">
+  <meta name="description" content="My job resume">
+  <meta name="author" content="862199816">
 
-  <title>John Doe - Business Administration</title>
+  <title>Shane Starcher - Attorney at Law</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ShaneStarcher.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Shane Starcher
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Political Science</div>
+        <p class="lead mb-4">Hello my name is Shane Starcher. I currently live in Riverside California. I have a juris doctorate which I obtained from the University of California, Los Angeles. I have also passed the California State bar and am legally allowed to practice law. I have wanted to work in law for a long time. My mother always said I had a knack for arguing with others however, I do not know if that is a good thing. I have a loving wife and a child on the way. I would prefer not to leave the state as it would hurt my family socially. My wife loves the Los Angeles area and would even consider herself a permanent part of the city. My hobbies include skateboarding and cooking. One of my favorite meals I make is butternut squash ravioli. I know soup typically is not the first thing that comes to mind. I am also an active fan of alternative music, specifically pop punk. I hope that one day my children will like similar things that I like. My wife’s taste in music features a lot of loud sounds and screeches mixed with autotune.  <br><br>
 
-        Enter bio here<br><br>
+        Able to work and communicate effectively with others. Flexible, willing and adaptable to take on additional responsibilities. Good problem solving and decision making with little supervision. Adequately manages time and completes assigned tasks on time<br><br>
 
-        Enter bio here
+         A few highlights of the jobs I have had over the years can seem vastly different. For starters, my first job was working in a restaurant my uncle owns up in Washington state. My uncle likes to think of it as fine dining yet every time I went into work, everyone was dressed casually even the customers. My second job was working at Target, which saw me working in the electronics section. I was the head of sales for a few months in the fall of 2019. Not long after I was fired, I believe this was because I was too good for the job. My next job was working at Sam’s club as a store picker. Which involved going around the warehouse shopping for customers and then giving the order when they arrived at the store. My next job would be the first job after college which involved me working as a tech specialist for the city of Temecula. It was an interesting job helping the city yet it did not pay very well and left me depressed. After that I began working as a ring maker for a local ring store in Los Angeles. During this time, I began studying for the LSAT to get into law school. Luckily I got a good score and was admitted to UCLA. It was during this time that I began to intern under Luis Garcia as an attorney for Amazon. The experience was delightful and engaging. My second and final internship was as an intern under Patrick Lord, an attorney representing the Supreme clothing brand. I would end up graduating with honors from UCLA and taking the bar shortly afterward. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/shanestarcher?trk=people-guest_people_search-card&original_referer=https%3A%2F%2Fwww.linkedin.com%2Fpub%2Fdir%3FfirstName%3DShane%26lastName%3DStarcher%26trk%3Dpublic_profile_people-search-bar_search-submit&challengeId=AQG2-zvS06-IlgAAAYC_5u-mJxdKOPKtq07rueSBDuKwL8_suTs9sdmLGIThvSr7uU13Hfq2w1ZfIkCkAQqppEJfwLLFCaH4NA&submissionId=3dd57d77-31d0-ee16-c2eb-a7be2e858f44">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/BruhitsShish">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/shanestarcher">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="malito:sstar017@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Bussboy</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Russell's</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Set, cleared and cleaned tables for dinner service.<br> 
+              • Cleaned dishes prior, during, and after dinner service.<br>
+              • Loaded, unloaded and organized perishable goods and products to/from the restaurant to remote locations such as wines, spirits, tables, and chairs.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2018 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Tech Specialist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">City of Temecula</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Help anyone within the city hall with techinical advice.<br>
+              • Fixed broken electronics such as computers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2018 - September 2018 </span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Ring Maker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Dale's Rings</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Melted materials needed for items<br>
+            • Provided adjustments on items created from store<br>
+            • Ran the front counter and provided anyone with help<br>
+            • Bought and resold items for customers who came into the store<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - June 2019</span>
           </div>
         </div>
 
@@ -152,33 +152,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor's of Political Science</div>
+            <div>MBA in Law and Society</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2017 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +169,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Work1.jpg" width="500px">
+            <img src="img/Work2.jpg" width="500px"><br>
+            <img src="img/Work3.jpg" width="500px">
+            <img src="img/Work4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Shane Starcher</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
